修复菜单排序问题